# regulatory-reporting-mart

./: .gitignore  CHANGELOG.md  CNAME  README.md  SECURITY.md  pyproject.toml  requirements.txt  serve_tmp.py
.github/workflows/: pages.yml
app/: mart_builder.py
docs/: KINETIC_GAIN_EMBEDDED.md
scripts/: generate_site.py  run_demo.py  smoke_check.py
tests/: test_mart_builder.py
warehouse/: schema.sql  seed.sql
warehouse/marts/: mart_deadline_pressure.sql  mart_reporting_readiness.sql
