[project]
name = "regulatory-reporting-mart"
version = "0.1.0"
description = "Warehouse-style reporting mart for docket readiness, evidence packets, and deadline pressure."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
